# docstring-agent

./: README.md  agents.py  config.py  input.py  main.py  models.py  output.py  pyproject.toml  quick_run.py  tools.py
app/: 1.py  edgecases.py  test_sample.py
docstring_agent/: __main__.py  agents.py  tools.py
docstring_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
