[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "docstring-agent"
version = "0.1.0"
description = "CLI tool to generate docstrings using OpenAI"
authors = [
  { name="Anvith Reddy" }
]
dependencies = [
  "openai"
]

[project.scripts]
docstring-agent = "docstring_agent.__main__:main"
